--- a/style.css
+++ b/style.css
@@ -17,32 +17,36 @@ h1 {
   text-align: center;
 }
 
-.form-div {
-  text-align: center;
+/* .form-div {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 7px;
   margin: 0 auto;
-  width: 500px;
-}
+  width: 460px;
+} */
 
 .JD-form {
-  /* background-color: #ffb0b0; */
-
-  margin-top: 30px;
-  width: 465px;
+  margin: 10px auto;
+  border-radius: 7px;
+  width: 460px;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  height: 260px;
-  text-align: center;
+  height: 100%;
 }
 
 .cont-div {
   padding-top: 15px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .cont-div label {
   color: wheat;
+  width: 104px;
 }
 
+.btn-pd {
+  padding-bottom: 10px;
+}
 button {
   border-radius: 5px;
   border: none;
@@ -53,38 +57,39 @@ button {
 }
 .enter-box {
   border: none;
-  width: 169px;
+  width: 160px;
   background-color: beige;
   border-radius: 6px;
   padding: 5px;
 }
 
 .big-textarea {
-  gap: 10px;
   display: flex;
   padding-top: 15px;
+  justify-content: space-evenly;
 }
 .big-textarea label {
-  margin-left: 111px;
-  width: 79px;
+  width: 104px;
   color: wheat;
 }
 
 #big-textbox {
   border: none;
   font-size: small;
-  width: 169px;
+  width: 160px;
   background-color: beige;
   border-radius: 6px;
   padding: 5px;
   height: 85px;
 }
+
+/* 2nd div style */
 .grid-container {
-  margin-top: 40px;
   display: grid;
   display: flex;
   padding: 20px;
   gap: 30px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 .dairy-PG {
   width: 300px;
@@ -120,4 +125,74 @@ button {
 }
 .p-2 {
   padding: 4px;
+}
+
+@media (max-width: 460px) {
+  .JD-form {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 530px) {
+  .JD-form {
+    width: 70%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-size: medium;
+  }
+  .cont-div label {
+    width: 30%;
+    font-size: small;
+  }
+  .enter-box {
+    width: 50%;
+    font-size: small;
+  }
+
+  .big-textarea label {
+    width: 30%;
+    font-size: small;
+  }
+
+  #big-textbox {
+    width: 50%;
+    font-size: small;
+  }
+}
+
+@media (max-width: 360px) {
+  h1 {
+    font-size: medium;
+  }
+  .cont-div label {
+    width: 30%;
+    font-size: small;
+  }
+  .enter-box {
+    width: 50%;
+    font-size: small;
+  }
+
+  .big-textarea label {
+    width: 30%;
+    font-size: small;
+  }
+
+  #big-textbox {
+    width: 50%;
+    font-size: small;
+  }
+}
+
+/* grid-container */
+@media (max-width: 1047px) {
+  .grid-container {
+    grid-template-columns: 2 1fr;
+    flex-wrap: wrap;
+    width: 90%;
+  }
 }
